test/invalid/baseline/readonly-iterable.txt
Syntax error at line 2 in readonly-iterable.widl, since `interface ReadonlyIterable`:
  readonly iterable<long>
  ^ Missing return type
